CSS change to avoid shift when adding a scrollbar on content load

--- a/src/shared/components/layouts/styles/base-layout.module.scss
+++ b/src/shared/components/layouts/styles/base-layout.module.scss
@@ -26,6 +26,6 @@
 
   & .main-content {
     grid-area: main-content;
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 }
